basic golang chapter

--- a/blogrender/templates/top.gohtml
+++ b/blogrender/templates/top.gohtml
@@ -1,4 +1,4 @@
-
+{{define "top"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,18 +18,4 @@
     </div>
 </nav>
 <main>
-
-<h1>Hello World</h1>
-
-<p>This is a description</p>
-
-Tags: <ul><li>go</li><li>tdd</li></ul>
-
-</main>
-<footer>
-    <ul>
-        <li><a href="https://github.com/tardhiansyah">GitHub</a></li>
-    </ul>
-</footer>
-</body>
-</html>
+{{end}}
